// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render edit patient page properly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#101010",
      "flex": 1,
      "paddingBottom": 16,
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#171717",
                "borderColor": "#fffffc",
                "borderRadius": 500,
                "borderWidth": 1.5,
                "display": "flex",
                "elevation": 24,
                "shadowColor": "#f31414",
                "shadowOffset": Object {
                  "height": 18,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 20,
                "width": "50%",
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://api.minimalavatars.com/avatar/random/png",
                }
              }
              style={
                Object {
                  "alignSelf": "center",
                  "borderRadius": 500,
                  "display": "flex",
                  "elevation": 24,
                  "height": 200,
                  "shadowColor": "#f31414",
                  "shadowOffset": Object {
                    "height": 18,
                    "width": 0,
                  },
                  "shadowOpacity": 0.25,
                  "shadowRadius": 20,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "display": "flex",
                "height": 200,
                "left": "45%",
                "opacity": 1,
                "position": "absolute",
                "top": 59,
                "width": 200,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fffffc",
                  "fontSize": 50,
                  "opacity": 0.5,
                  "width": "30%",
                }
              }
            >
               +
            </Text>
          </View>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Name
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰇰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient name"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Email
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰇰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient email address"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Contact
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰷰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="phone-pad"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient phone number"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Address
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient address"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Date of Birth
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰃭
            </Text>
            <TextInput
              onBlur={[Function]}
              onChangeText={[Function]}
              onEndEditing={[Function]}
              onFocus={[Function]}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
              value="2022-10-17"
            />
            <Text
              allowFontScaling={false}
              onPress={[Function]}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "alignSelf": "center",
                      "color": "#e51c83",
                      "fontSize": 18,
                      "marginHorizontal": 10,
                    },
                    Object {
                      "fontSize": 28,
                    },
                  ],
                  Object {
                    "fontFamily": "Ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
            <Modal
              animationType="none"
              hardwareAccelerated={false}
              isVisible={false}
              onHide={[Function]}
              transparent={true}
              visible={false}
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "marginHorizontal": 10,
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Special Attention:
          </Text>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#e51c83",
                  "fontSize": 28,
                  "marginHorizontal": 10,
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            󰓒
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#171717",
              "borderRadius": 10,
              "borderWidth": 0.4,
              "margin": 5,
            }
          }
        >
          <View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "marginHorizontal": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fffffc",
                    "fontSize": 20,
                    "marginHorizontal": 15,
                    "marginVertical": 7,
                  }
                }
              >
                Allergy
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#171717",
                      "borderRadius": 20,
                      "borderWidth": 0.5,
                      "flexDirection": "row",
                    },
                    Object {
                      "borderColor": "#4c4c4c",
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 12,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#e51c83",
                        "fontSize": 18,
                        "marginHorizontal": 10,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󱎷
                </Text>
                <TextInput
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Enter new allergy name"
                  secureTextEntry={false}
                  style={
                    Object {
                      "color": "#bdbdbb",
                      "flex": 1,
                      "fontSize": 14,
                    }
                  }
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "red",
                    "fontSize": 12,
                    "marginHorizontal": 15,
                    "marginVertical": 0,
                    "zIndex": 2,
                  }
                }
              />
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#e51c83",
                  "borderColor": "#fffffc",
                  "borderRadius": 10,
                  "borderWidth": 0.5,
                  "display": "flex",
                  "margin": 10,
                  "opacity": 1,
                  "padding": 10,
                  "textAlign": "center",
                  "width": "25%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 10,
                    "textAlign": "center",
                  }
                }
              >
                Add allergy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery1
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery3
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery3
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`should render list vaccine page properly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#101010",
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View>
          <Image
            source={
              Object {
                "uri": "https://api.minimalavatars.com/avatar/random/png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "pink",
                "borderRadius": 500,
                "borderWidth": 2,
                "display": "flex",
                "height": 200,
                "width": "50%",
              }
            }
          />
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "display": "flex",
                "height": 200,
                "left": "45%",
                "opacity": 1,
                "position": "absolute",
                "top": 59,
                "width": 200,
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRadius": 50,
                  "color": "black",
                  "fontSize": 50,
                  "opacity": 0.7,
                  "width": "30%",
                }
              }
            >
               +
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Name
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰇰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient name"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Email
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰇰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient email address"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Contact
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰷰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="phone-pad"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient phone number"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Patient Address
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰷰
            </Text>
            <TextInput
              defaultValue=""
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Enter patient address"
              secureTextEntry={false}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "red",
                "fontSize": 12,
                "marginHorizontal": 15,
                "marginVertical": 0,
                "zIndex": 2,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "marginHorizontal": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Date of Birth
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#171717",
                  "borderRadius": 20,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                },
                Object {
                  "borderColor": "#4c4c4c",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#e51c83",
                    "fontSize": 18,
                    "marginHorizontal": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              󰃭
            </Text>
            <TextInput
              onBlur={[Function]}
              onFocus={[Function]}
              onPressIn={[Function]}
              style={
                Object {
                  "color": "#bdbdbb",
                  "flex": 1,
                  "fontSize": 14,
                }
              }
              value="Wed Oct 12 2022"
            />
            <Modal
              animationType="none"
              hardwareAccelerated={false}
              isVisible={false}
              onHide={[Function]}
              transparent={true}
              visible={false}
            />
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "marginHorizontal": 10,
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fffffc",
                "fontSize": 20,
                "marginHorizontal": 15,
                "marginVertical": 7,
              }
            }
          >
            Special Attention:
          </Text>
          <Text
            allowFontScaling={false}
            onPress={[Function]}
            selectable={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#e51c83",
                  "fontSize": 28,
                  "marginHorizontal": 10,
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            󰓒
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#171717",
              "borderRadius": 10,
              "borderWidth": 0.4,
              "margin": 5,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "marginHorizontal": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fffffc",
                    "fontSize": 20,
                    "marginHorizontal": 15,
                    "marginVertical": 7,
                  }
                }
              >
                Allergy
              </Text>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#171717",
                      "borderRadius": 20,
                      "borderWidth": 0.5,
                      "flexDirection": "row",
                    },
                    Object {
                      "borderColor": "#4c4c4c",
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 12,
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#e51c83",
                        "fontSize": 18,
                        "marginHorizontal": 10,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󱎷
                </Text>
                <TextInput
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Enter new allergy name"
                  secureTextEntry={false}
                  style={
                    Object {
                      "color": "#bdbdbb",
                      "flex": 1,
                      "fontSize": 14,
                    }
                  }
                />
              </View>
              <Text
                style={
                  Object {
                    "color": "red",
                    "fontSize": 12,
                    "marginHorizontal": 15,
                    "marginVertical": 0,
                    "zIndex": 2,
                  }
                }
              />
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#e51c83",
                  "borderColor": "#fffffc",
                  "borderRadius": 10,
                  "borderWidth": 0.5,
                  "display": "flex",
                  "margin": 10,
                  "opacity": 1,
                  "padding": 10,
                  "textAlign": "center",
                  "width": "25%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 10,
                    "textAlign": "center",
                  }
                }
              >
                Add allergy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery1
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery3
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "margin": 2,
                  "position": "relative",
                }
              }
            >
              <Text
                style={
                  Object {
                    "borderColor": "#e51c83",
                    "borderRadius": 10,
                    "borderWidth": 1,
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-evenly",
                    "margin": 10,
                    "padding": 7,
                  }
                }
              >
                allery3
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#ff2394",
                    "borderRadius": 10,
                    "opacity": 1,
                    "position": "absolute",
                    "right": -10,
                    "top": 10,
                    "width": 20,
                    "zIndex": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "textAlign": "center",
                    }
                  }
                >
                  ╳
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ff2394",
              "borderRadius": 10,
              "display": "flex",
              "fontSize": 20,
              "margin": 10,
              "marginBottom": 150,
              "opacity": 1,
              "padding": 10,
              "textAlign": "center",
              "width": "50%",
            }
          }
        >
          <Text
            style={
              Object {
                "fontSize": 15,
                "textAlign": "center",
              }
            }
          >
            Add new patient
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
